2008-10-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
    (drawItem): Check item visibility.

2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/axis/Axis.java
    (fireChangeEvent): New method,
    also updated various other methods to call fireChangeEvent().

2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/WaterfallRenderer.java
    (drawItem): Fixed bar misalignment when maxBarWidth is applied.

2008-09-26  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/VectorRenderer.java
    (drawItem): Add chart entity.

2008-09-25  David Gilbert  <david.gilbert@object-refinery.com>

    Patch 1934255 (incorporating 1870189):
    * source/org/jfree/chart/axis/Axis.java 
    (minorTickMarksVisible): New field,
    (minorTickMarkInsideLength): New field,
    (minorTickMarkOutsideLength): New field,
    (Axis(String)): Initialise new fields,
    (isMinorTickMarksVisible): New method,
    (setMinorTickMarksVisible): Likewise,
    (getMinorTickMarkInsideLength): Likewise,
    (setMinorTickMarkInsideLength): Likewise,
    (getMinorTickMarkOutsideLength): Likewise,
    (setMinorTickMarkOutsideLength): Likewise,
    * source/org/jfree/chart/axis/DateAxis.java
    (refreshTicksHorizontal): Add minor ticks,
    (refreshTicksVertical): Likewise,
    * source/org/jfree/chart/axis/DateTick.java
    (DateTick): New constructor,
    (equals): Clean up,
    * source/org/jfree/chart/axis/LogAxis.java
    (minorTickCount): Removed (now in superclass),
    (LogAxis(String)): Updated for removed field,
    (getMinorTickCount): Removed (now in superclass),
    (setMinorTickCount): Likewise,
    (refreshTicksHorizontal): Updated for removed field,
    (refreshTicksVertical): Likewise,
    (equals): Likewise,
    (hashCode): Likewise,